force-app/main/default/objects/Credit_Memo__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>Billing Address</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>