force-app/main/default/objects/Credit_Memo__c/fields/Credit_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Credit_Remaining__c</fullName>
    <label>Credit Remaining</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>