force-app/main/default/objects/Credit_Memo__c/fields/Edit_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Edit_Sequence__c</fullName>
    <label>Edit Sequence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>