force-app/main/default/objects/Credit_Memo__c/fields/Is_Pending__c.field-meta.xml
<CustomField>
    <fullName>Is_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pending</label>
    <type>Checkbox</type>
</CustomField>