force-app/main/default/objects/Credit_Memo__c/fields/Is_To_Be_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Is_To_Be_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is To Be Emailed</label>
    <type>Checkbox</type>
</CustomField>