force-app/main/default/objects/Credit_Memo__c/fields/Item_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Item_Sales_Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Sales Tax</label>
    <referenceTo>Item_Sales_Tax__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>