force-app/main/default/objects/Credit_Memo__c/fields/Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Ref_Number__c</fullName>
    <label>Ref Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>