force-app/main/default/objects/Credit_Memo__c/fields/Sales_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Amount__c</fullName>
    <label>Sales Tax Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>