force-app/main/default/objects/Credit_Memo__c/fields/Txn_Date__c.field-meta.xml
<CustomField>
    <fullName>Txn_Date__c</fullName>
    <label>Txn Date</label>
    <type>Date</type>
</CustomField>