force-app/main/default/objects/Credit_Memo__c/fields/Txn_Number__c.field-meta.xml
<CustomField>
    <fullName>Txn_Number__c</fullName>
    <label>Txn Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>